# nested-eliminators

./: .gitignore  LICENSE  Makefile  README.md  _RocqProject  opam-artifact-setup.sh  rocq-metarocq-nested-eliminators.opam
formalization/: Lemma.v  Nested_to_mutual.v  Nested_to_mutual_proof.v  Positivity_condition.v  RoseTree.v  typing.v
theories/: examples.v  test_functions.v
theories/API/: api_debruijn.v  context_access.v  context_store.v  core.v  creating_terms.v  debug_functions.v  decide.v  fold_functions.v  inductive_access.v  inductive_store.v  read_mode_ind.v  view_args.v
theories/Eliminators/: eliminators.v
theories/Preprocess/: strictly_positive_uniform_parameters.v  uniform_parameters.v
theories/SparseParametricity/: local_fundamental_lemma.v  sparse_parametricity.v  sparse_parametricity_rec_hyp.v
